# Image-size-checker

./: README.md
Image-size-checker/: CMakeLists.txt  imagesizechecker.cpp  imagesizechecker.h  imagesizechecker.ui  main.cpp  pathselectionwindow.cpp  pathselectionwindow.h  pathselectionwindow.ui
